Fix sizing of tray details scroll views.

I tried to make this code make more sense, but touching scroll views is
always a bit like Jenga so in the end I went for the minimal change that
fixes the observed bug. (The fragile code is something that we
inherited from the pre-MD layout.)

BUG=663790

Review-Url: https://codereview.chromium.org/2491713003
Cr-Commit-Position: refs/heads/master@{#431161}

Former-commit-id: dcd3a8aae5f2f849b50b31d95ae7802eaf5db484